# self-awareness-experiment

./: .pre-commit-config.yaml  README.md  RESPONSE_SCHEMA.md  main.py  pyproject.toml
.github/: copilot-instruction.md
memory_management/: main.py
model/: schema.py
src/: __init__.py  agent.py
